[tool.poetry]
name = "tiktoken-calculator"
version = "0.0.0"
description = "Calculate the token count."
authors = ["JacobLinCool <jacoblincool@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tiktoken = "^0.3.1"
gradio = "^3.21.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
